unhelpful error message for TableGrow https://bugs.webkit.org/show_bug.cgi?id=247452 rdar://101241285

Reviewed by Justin Michaud and Yusuke Suzuki.

Improves our error messages when printing WebAssembly types. Instead of printing just the TypeKind,
the WasmFunctionParser now prints the type itself, and instead of Wasm::Type::dump printing the TypeKind,
it now prints the TypeDefinition or more-specific TypeKind if available.

* Source/JavaScriptCore/wasm/WasmFunctionParser.h:
(JSC::Wasm::FunctionParser<Context>::parseStructFieldManipulation):
(JSC::Wasm::FunctionParser<Context>::checkBranchTarget):
(JSC::Wasm::FunctionParser<Context>::unify):
(JSC::Wasm::FunctionParser<Context>::parseExpression):
* Source/JavaScriptCore/wasm/WasmTypeDefinition.h:
(JSC::Wasm::Type::dump const):
* Source/JavaScriptCore/wasm/generateWasmOpsHeader.py:

Canonical link: https://commits.webkit.org/256472@main