Source/JavaScriptCore/wasm/WasmTypeDefinition.h
@@ -464,6 +464,31 @@ private:
     // Payload is stored here.
 };
 
+inline void Type::dump(PrintStream& out) const
+{
+    TypeKind kindToPrint = kind;
+    if (index != TypeDefinition::invalidIndex) {
+        auto signedIndex = static_cast<std::make_signed<TypeIndex>::type>(index);
+        if (signedIndex < 0) {
+            // If the index is negative, we assume we're using it to represent a TypeKind.
+            // FIXME: Reusing index to store a typekind is kind of messy? We should consider
+            // refactoring Type to handle this case more explicitly, since it's used in
+            // funcrefType() and externrefType().
+            // https://bugs.webkit.org/show_bug.cgi?id=247454
+            kindToPrint = static_cast<TypeKind>(signedIndex);
+        } else {
+            // Assume the index is a pointer to a TypeDefinition.
+            out.print(*reinterpret_cast<TypeDefinition*>(index));
+            return;
+        }
+    }
+    switch (kindToPrint) {
+#define CREATE_CASE(name, ...) case TypeKind::name: out.print(#name); break;
+        FOR_EACH_WASM_TYPE(CREATE_CASE)
+#undef CREATE_CASE
+    }
+}
+
 struct TypeHash {
     RefPtr<TypeDefinition> key { nullptr };
     TypeHash() = default;
